[package]
name = "postgres-cursor"
version = "0.3.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "MIT"
keywords = ["postgres", "cursor", "postgresql", "sql"]
categories = ["database"]
repository = "https://github.com/jwilm/rust-postgres-cursor"
documentation = "https://docs.rs/postgres-cursor"
description = "Cursor abstraction for PostgreSQL"
readme = "README.md"

[dependencies]
rand = "0.8.4"

[dependencies.postgres]
version = "0.19.2"

[dev-dependencies]
lazy_static = "1.4.0"
